day2/demopod.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: ashupod2  # name of the pod
spec: # info about container and its other required details
