day2/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-app
spec: 
  containers:
    - name: my-container
      image: nginx
      ports:
        - containerPort: 80
